--- a/config/todo.yml
+++ b/config/todo.yml
@@ -2,4 +2,4 @@ name: "Anderson Braz"
 position: "Developer"
 local: "Brasilia"
 theme: "DevOps"
-list: ['alpha','bravo','hotel']
+list: ["alpha","bravo","hotel"]
